<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.aganpensamsung.MainActivity">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/holo_blue_bright">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/save"
                android:textSize="12sp"
                android:id="@+id/btn_save"
                />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/load"
                android:textSize="12sp"
                android:id="@+id/btn_load" />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/image"
                android:textSize="12sp"
                android:id="@+id/btn_image"
                />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/text"
                android:textSize="12sp"
                android:id="@+id/btn_text"
                />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="12sp"
                android:text="@string/stroke"
                android:id="@+id/btn_stroke"
                />
        </LinearLayout>
    </HorizontalScrollView>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/holo_blue_light">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/pen"
                android:textSize="12sp"
                android:id="@+id/btn_pen"
                />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/eraser"
                android:textSize="12sp"
                android:id="@+id/btn_eraser"
                />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/undo"
                android:textSize="12sp"
                android:id="@+id/btn_undo"
                />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/redo"
                android:id="@+id/btn_redo"
                android:textSize="12sp"
                />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/bg"
                android:textSize="12sp"
                android:id="@+id/btn_background"
                />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/image"
                android:textSize="12sp"
                android:id="@+id/btn_image"
                />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/text"
                android:textSize="12sp"
                android:id="@+id/btn_text"
                />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="12sp"
                android:text="@string/stroke"
                android:id="@+id/btn_stroke"
                />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/srecog"
                android:textSize="12sp"
                android:id="@+id/btn_shaperecog"
                />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/shapeline"
                android:textSize="12sp"
                android:id="@+id/btn_shapeline"
                />
        </LinearLayout>
    </HorizontalScrollView>
    <FrameLayout
        android:id="@+id/frame_canvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <RelativeLayout
                android:id="@+id/layout_canvas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/settingTextLayout" >
            </RelativeLayout>
            <com.samsung.android.sdk.pen.settingui.SpenSettingTextLayout
                android:id="@+id/settingTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                android:visibility="gone"
                android:background="@android:color/holo_purple">
            </com.samsung.android.sdk.pen.settingui.SpenSettingTextLayout>
        </RelativeLayout>
        <FrameLayout
            android:id="@+id/settingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
</LinearLayout>
